--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
@@ -133,6 +132,7 @@ body {
 @media (max-width: 724px) {
     .container {
         flex-direction: column;
+        height: 100%;
     }
 
     .column {
@@ -141,7 +141,6 @@ body {
 
     .box {
         width: 90%;
-        padding: 1rem;
         margin: 3rem 0 4rem 0;
     }
 
